Moar devcon 2015 presentation.

--- a/b2stub-devcon2015.html
+++ b/b2stub-devcon2015.html
@@ -293,7 +293,7 @@ enabler-app.enabler.courseStep.batchUid.label=Batch Uid
     &lt;stripes:form beanclass=&quot;com.alltheducks.enabler.stripes.EnablerAction&quot;&gt;
         &lt;!-- Don&#39;t
         use stripes:hidden here, otherwise stripes looks for the bean field with that name. --&gt;
-        &lt;input type=&quot;hidden&quot; name=&quot;setStatus&quot;/&gt;
+        &lt;input type=&quot;hidden&quot; name=&quot;setCourseStatus&quot;/&gt;
 
         &lt;bbNG:dataCollection&gt;
             &lt;bbNG:step title=&quot;${statusTitle}&quot;&gt;
@@ -402,6 +402,136 @@ enabler-app.enabler.statusStep.status.label=Enabled
 enabler-app.enabler.statusStep.batchUid.label=Batch Uid
 enabler-app.enabler.statusStep.courseName.label=Course Name
   </code></pre>
+</section>
+
+<section>
+  <blockquote class="nonquote">Finally, we need to persit changes to the status.</blockquote>
+</section>
+
+<section>
+  <h3>10. A new action method.</h3>
+  <p class="path">src/main/java/com/alltheducks/enabler/stripes/EnablerAction.java</p>
+  <pre><code class="java">
+package com.alltheducks.enabler.stripes;
+
+import blackboard.admin.data.IAdminObject;
+import blackboard.admin.data.course.CourseSite;
+import blackboard.admin.persist.course.CourseSiteLoader;
+import blackboard.admin.persist.course.CourseSitePersister;
+import blackboard.admin.persist.course.impl.CourseSiteDbLoader;
+import blackboard.admin.persist.course.impl.CourseSiteDbPersister;
+import blackboard.data.ValidationException;
+import blackboard.db.ConstraintViolationException;
+import blackboard.persist.PersistenceException;
+import blackboard.platform.intl.BbResourceBundle;
+import blackboard.platform.intl.BundleManager;
+import blackboard.platform.intl.BundleManagerFactory;
+import blackboard.platform.plugin.PlugIn;
+import blackboard.platform.plugin.PlugInManager;
+import blackboard.platform.plugin.PlugInManagerFactory;
+import blackboard.platform.plugin.PlugInUtil;
+import blackboard.platform.servlet.InlineReceiptUtil;
+import com.alltheducks.bb.stripes.EntitlementRestrictions;
+import net.sourceforge.stripes.action.*;
+import com.alltheducks.bb.stripes.BlackboardActionBeanContext;
+
+
+@EntitlementRestrictions(entitlements = &quot;atd.enabler.admin.MODIFY&quot;, errorPage = &quot;error.jsp&quot;)
+public class EnablerAction implements ActionBean {
+
+    private BlackboardActionBeanContext context;
+
+    private boolean courseEnabled;
+    private String batchUid;
+    private String courseName;
+
+    @DefaultHandler
+    public Resolution displayEnabler() {
+        return new ForwardResolution(&quot;/WEB-INF/jsp/enabler.jsp&quot;);
+    }
+
+    public Resolution displayCourseStatus() throws PersistenceException {
+        CourseSiteLoader courseLoader = CourseSiteDbLoader.Default.getInstance();
+
+        CourseSite cs = courseLoader.load(batchUid);
+        IAdminObject.RowStatus status = cs.getRowStatus();
+        courseEnabled = status.equals(IAdminObject.RowStatus.ENABLED);
+        courseName = cs.getTitle();
+
+        return new ForwardResolution(&quot;/WEB-INF/jsp/status.jsp&quot;);
+    }
+
+    public Resolution saveCourseStatus() throws PersistenceException, ConstraintViolationException, ValidationException {
+        CourseSiteLoader courseLoader = CourseSiteDbLoader.Default.getInstance();
+        CourseSitePersister coursePersister = CourseSiteDbPersister.Default.getInstance();
+
+        CourseSite cs = courseLoader.load(batchUid);
+        if (courseEnabled) {
+            cs.setRowStatus(IAdminObject.RowStatus.ENABLED);
+        } else {
+            cs.setRowStatus(IAdminObject.RowStatus.DISABLED);
+        }
+        coursePersister.save(cs);
+
+        String destUrl = InlineReceiptUtil.addSuccessReceiptToUrl(&quot;Enabler.action&quot;, getMessage(&quot;enabler-app.enabler.saveStatus.success.message&quot;, cs.getTitle()));
+
+        return new RedirectResolution(destUrl, false);
+    }
+
+    public boolean isCourseEnabled() {
+        return courseEnabled;
+    }
+
+    public void setCourseEnabled(boolean courseEnabled) {
+        this.courseEnabled = courseEnabled;
+    }
+
+    public String getBatchUid() {
+        return batchUid;
+    }
+
+    public void setBatchUid(String batchUid) {
+        this.batchUid = batchUid;
+    }
+
+    public String getCourseName() {
+        return courseName;
+    }
+
+    public void setCourseName(String courseName) {
+        this.courseName = courseName;
+    }
+
+    private String getMessage(String key, String... args) {
+        PlugInManager pluginMgr = PlugInManagerFactory.getInstance();
+        PlugIn plugin = pluginMgr.getPlugIn(&quot;atd&quot;, &quot;enabler&quot;);
+        BundleManager bm = BundleManagerFactory.getInstance();
+        BbResourceBundle bundle = bm.getPluginBundle(plugin.getId());
+        return bundle.getString(key, args);
+    }
+    public ActionBeanContext getContext() {
+        return context;
+    }
+
+    public void setContext(ActionBeanContext context) {
+        this.context = (BlackboardActionBeanContext)context;
+    }
+
+}
+  </code></pre>
+</section>
+
+<section>
+  <h3>And the language pack key!</h3>
+  <p class="path">src/webapp/WEB-INF/bundles/bb-manifest-en_GB.properties</p>
+  <p>Add this key:</p>
+  <pre><code>
+enabler-app.enabler.saveStatus.success.message=Saved Course '{0}'
+  </code></pre>
+</section>
+
+<section>
+  <blockquote class="nonquote">Take the rest of the week off.</blockquote>
 </section>
 
 <!-- Your Style -->
