--- a/b2stub-devcon2015.html
+++ b/b2stub-devcon2015.html
@@ -152,7 +152,7 @@
   <h3>1. Clone the stub.</h3>
   <ol>
     <li>Create a project directory</li>
-    <li>git clone https://github.com/AllTheDucks/atd-b2-stub <project-name></li>
+    <li>git clone https://github.com/AllTheDucks/atd-b2-stub</li>
     <li>Change into project directory</li>
     <li>./gradlew initb2 (not in Gradle daemon mode)</li>
   </ol>
@@ -167,17 +167,16 @@
 </section>
 
 <section>
-  <h3>2. Create MVC Controller (Stripes action).</h3>
-  <p class="path">src/main/java/com/alltheducks/enabler/stripes/EnablerAction.java</p>
-  <pre><code class="java">
-package com.alltheducks.enabler.stripes;
+  <h3>3. Create MVC Controller (Stripes action).</h3>
+  <p class="path"><a href="https://github.com/AllTheDucks/atd-enabler/blob/step/3/src/main/java/com/alltheducks/enabler/stripes/EnablerAction.java">src/main/java/com/alltheducks/enabler/stripes/EnablerAction.java</a></p>
+  <pre><code class="java">package com.alltheducks.enabler.stripes;
 
 import net.sourceforge.stripes.action.*;
 import com.alltheducks.bb.stripes.BlackboardActionBeanContext;
 
 
 @EntitlementRestrictions(entitlements = &quot;atd.enabler.admin.MODIFY&quot;, errorPage = &quot;error.jsp&quot;)
-public class EnablerAction extends ActionBean {
+public class EnablerAction implements ActionBean {
 
 	private BlackboardActionBeanContext context;
 
@@ -199,10 +198,9 @@ public class EnablerAction extends ActionBean {
 </section>
 
 <section>
-  <h3>3. Create MVC View (JSP).</h3>
-  <p class="path">src/main/webapp/WEB-INF/jsp/enabler.jsp</p>
-  <pre><code class="xml">
-&lt;!DOCTYPE html&gt;
+  <h3>4. Create MVC View (JSP).</h3>
+  <p class="path"><a href="https://github.com/AllTheDucks/atd-enabler/blob/step/4/src/main/webapp/WEB-INF/jsp/enabler.jsp">src/main/webapp/WEB-INF/jsp/enabler.jsp</a></p>
+  <pre><code class="xml">&lt;!DOCTYPE html&gt;
 
 &lt;%@ taglib uri=&quot;/bbNG&quot; prefix=&quot;bbNG&quot; %&gt;
 &lt;%@ taglib prefix=&quot;stripes&quot; uri=&quot;http://stripes.sourceforge.net/stripes.tld&quot; %&gt;
@@ -233,34 +231,32 @@ public class EnablerAction extends ActionBean {
 </section>
 
 <section>
-  <h3>4. Define Language Pack Keys.</h3>
-  <p class="path">src/webapp/WEB-INF/bundles/bb-manifest-en_GB.properties</p>
+  <h3>5. Define Language Pack Keys.</h3>
+  <p class="path"><a href="https://github.com/AllTheDucks/atd-enabler/blob/step/5/src/main/webapp/WEB-INF/bundles/bb-manifest-en_GB.properties">src/webapp/WEB-INF/bundles/bb-manifest-en_GB.properties</a></p>
   <p>Add these keys:</p>
-  <pre><code>
-enabler-app.enabler.courseStep.title=Select Course
+  <pre><code>enabler-app.enabler.courseStep.title=Select Course
 enabler-app.enabler.courseStep.batchUid.label=Batch Uid
   </code></pre>
 </section>
 
 <section>
-  <h3>5. Register the tool.</h3>
-  <p class="path">src/webapp/WEB-INF/bb-manifest.xml</p>
+  <h3>6. Register the tool.</h3>
+  <p class="path"><a href="https://github.com/AllTheDucks/atd-enabler/blob/step/6/src/main/webapp/WEB-INF/bb-manifest.xml">src/webapp/WEB-INF/bb-manifest.xml</a></p>
   <p>In the "enabler-app" application:</p>
-  <pre><code class="xml">
-&lt;link&gt;
-    &lt;type value=&quot;course_tool&quot;/&gt;
+  <pre><code class="xml">&lt;link&gt;
+    &lt;type value=&quot;system_tool&quot;/&gt;
+    &lt;handle value=&quot;enablersys&quot;/&gt;
     &lt;name value=&quot;plugin.link.enabler.name&quot;/&gt;
-    &lt;url value=&quot;Tool.action&quot;/&gt;
-    &lt;handle value=&quot;enabler&quot;/&gt;
-    &lt;description
-            value=&quot;plugin.link.enabler.description&quot;/&gt;
-    &lt;entitlement-uid value=&quot;atd.enabler.admin.MODIFY&quot; /&gt;
+    &lt;navhandle value=&quot;&quot; /&gt;
+    &lt;description value=&quot;plugin.link.enabler.description&quot;/&gt;
+    &lt;url value=&quot;Enabler.action&quot;/&gt;
+     &lt;entitlement-uid value=&quot;atd.enabler.admin.MODIFY&quot; /&gt;
 &lt;/link&gt;
   </code></pre>
 </section>
 
 <section>
-  <h3>6. Test deploy, again.</h3>
+  <h3>7. Test deploy, again.</h3>
   <ol>
     <li>./gradlew deployb2</li>
   	<li>Login to Blackboard, naviage to System Admin.</li>
@@ -273,10 +269,9 @@ enabler-app.enabler.courseStep.batchUid.label=Batch Uid
 </section>
 
 <section>
-  <h3>7. Add another view (JSP) for the status...</h3>
-  <p class="path">src/main/webapp/WEB-INF/jsp/status.jsp</p>
-  <pre><code class="xml">
-&lt;!DOCTYPE html&gt;
+  <h3>8. Add another view (JSP) for the status...</h3>
+  <p class="path"><a href="https://github.com/AllTheDucks/atd-enabler/blob/step/8/src/main/webapp/WEB-INF/jsp/status.jsp" />src/main/webapp/WEB-INF/jsp/status.jsp</a></p>
+  <pre style="margin-top: 0;"><code class="xml" style="font-size: 10px; margin-top: 0;">&lt;!DOCTYPE html&gt;
 
 &lt;%@ taglib uri=&quot;/bbNG&quot; prefix=&quot;bbNG&quot; %&gt;
 &lt;%@ taglib prefix=&quot;stripes&quot; uri=&quot;http://stripes.sourceforge.net/stripes.tld&quot; %&gt;
@@ -291,10 +286,8 @@ enabler-app.enabler.courseStep.batchUid.label=Batch Uid
                   navItem=&quot;atd-enabler-app-nav-enabler&quot;&gt;
 
     &lt;stripes:form beanclass=&quot;com.alltheducks.enabler.stripes.EnablerAction&quot;&gt;
-        &lt;!-- Don&#39;t
-        use stripes:hidden here, otherwise stripes looks for the bean field with that name. --&gt;
+        &lt;!-- Don&#39;t use stripes:hidden here, otherwise stripes looks for the bean field with that name. --&gt;
         &lt;input type=&quot;hidden&quot; name=&quot;setCourseStatus&quot;/&gt;
-
         &lt;bbNG:dataCollection&gt;
             &lt;bbNG:step title=&quot;${statusTitle}&quot;&gt;
                 &lt;bbNG:dataElement label=&quot;${courseNameLabel}&quot;&gt;
@@ -310,94 +303,54 @@ enabler-app.enabler.courseStep.batchUid.label=Batch Uid
             &lt;bbNG:stepSubmit /&gt;
         &lt;/bbNG:dataCollection&gt;
     &lt;/stripes:form&gt;
-
 &lt;/bbNG:genericPage&gt;
   </code></pre>
 </section>
 
 <section>
-  <h3>8. ... and update the controller.</h3>
-  <p class="path">src/main/java/com/alltheducks/enabler/stripes/EnablerAction.java</p>
-  <pre><code class="java">
-package com.alltheducks.enabler.stripes;
+  <h3>9. ... and update the controller.</h3>
+  <p class="path"><a href="https://github.com/AllTheDucks/atd-enabler/blob/step/9/src/main/java/com/alltheducks/enabler/stripes/EnablerAction.java">src/main/java/com/alltheducks/enabler/stripes/EnablerAction.java</a></p>
+  <pre><code class="java" style="font-size:10px;">private boolean courseEnabled;
+private String batchUid;
+private String courseName;
+...
+public Resolution displayCourseStatus() throws PersistenceException {
+    CourseSiteLoader courseLoader = CourseSiteDbLoader.Default.getInstance();
 
-import blackboard.admin.data.IAdminObject;
-import blackboard.admin.data.course.CourseSite;
-import blackboard.admin.persist.course.CourseSiteLoader;
-import blackboard.admin.persist.course.impl.CourseSiteDbLoader;
-import blackboard.persist.PersistenceException;
-import com.alltheducks.bb.stripes.EntitlementRestrictions;
-import net.sourceforge.stripes.action.*;
-import com.alltheducks.bb.stripes.BlackboardActionBeanContext;
+    CourseSite cs = courseLoader.load(batchUid);
+    IAdminObject.RowStatus status = cs.getRowStatus();
+    courseEnabled = status.equals(IAdminObject.RowStatus.ENABLED);
+    courseName = cs.getTitle();
 
-
-@EntitlementRestrictions(entitlements = &quot;atd.enabler.admin.MODIFY&quot;, errorPage = &quot;error.jsp&quot;)
-public class EnablerAction implements ActionBean {
-
-    private BlackboardActionBeanContext context;
-
-    private boolean courseEnabled;
-    private String batchUid;
-    private String courseName;
-
-    @DefaultHandler
-    public Resolution displayEnabler() {
-        return new ForwardResolution(&quot;/WEB-INF/jsp/enabler.jsp&quot;);
-    }
-
-    public Resolution displayCourseStatus() throws PersistenceException {
-        CourseSiteLoader courseLoader = CourseSiteDbLoader.Default.getInstance();
-
-        CourseSite cs = courseLoader.load(batchUid);
-        IAdminObject.RowStatus status = cs.getRowStatus();
-        courseEnabled = status.equals(IAdminObject.RowStatus.ENABLED);
-        courseName = cs.getTitle();
-
-        return new ForwardResolution(&quot;/WEB-INF/jsp/status.jsp&quot;);
-    }
-
-    public boolean isCourseEnabled() {
-        return courseEnabled;
-    }
-
-    public void setCourseEnabled(boolean courseEnabled) {
-        this.courseEnabled = courseEnabled;
-    }
-
-    public String getBatchUid() {
-        return batchUid;
-    }
-
-    public void setBatchUid(String batchUid) {
-        this.batchUid = batchUid;
-    }
-
-    public String getCourseName() {
-        return courseName;
-    }
-
-    public void setCourseName(String courseName) {
-        this.courseName = courseName;
-    }
-
-    public ActionBeanContext getContext() {
-        return context;
-    }
-
-    public void setContext(ActionBeanContext context) {
-        this.context = (BlackboardActionBeanContext)context;
-    }
-
+    return new ForwardResolution(&quot;/WEB-INF/jsp/status.jsp&quot;);
 }
+public boolean isCourseEnabled() {
+    return courseEnabled;
+}
+public void setCourseEnabled(boolean courseEnabled) {
+    this.courseEnabled = courseEnabled;
+}
+public String getBatchUid() {
+    return batchUid;
+}
+public void setBatchUid(String batchUid) {
+    this.batchUid = batchUid;
+}
+public String getCourseName() {
+    return courseName;
+}
+public void setCourseName(String courseName) {
+    this.courseName = courseName;
+}
+...
   </code></pre>
 </section>
 
 <section>
-  <h3>9. And, dont forget the new language pack keys.</h3>
-  <p class="path">src/webapp/WEB-INF/bundles/bb-manifest-en_GB.properties</p>
+  <h3>10. And, dont forget the new language pack keys.</h3>
+  <p class="path"><a href="https://github.com/AllTheDucks/atd-enabler/blob/step/10/src/main/webapp/WEB-INF/bundles/bb-manifest-en_GB.properties">src/webapp/WEB-INF/bundles/bb-manifest-en_GB.properties</a></p>
   <p>Add these keys:</p>
-  <pre><code>
-enabler-app.enabler.statusStep.title=Course Status
+  <pre><code>enabler-app.enabler.statusStep.title=Course Status
 enabler-app.enabler.statusStep.status.label=Enabled
 enabler-app.enabler.statusStep.batchUid.label=Batch Uid
 enabler-app.enabler.statusStep.courseName.label=Course Name
@@ -405,129 +358,69 @@ enabler-app.enabler.statusStep.courseName.label=Course Name
 </section>
 
 <section>
+  <h3>11. Test deploy, again, again.</h3>
+  <ol>
+    <li>./gradlew deployb2</li>
+  	<li>Login to Blackboard, naviage to System Admin.</li>
+  	<li>Look for "Course Enabler" tool.</li>
+    <li>Type in a course BatchUid and submit. (You may need to create a course first)</li>
+  </ol>
+</section>
+
+<section>
   <blockquote class="nonquote">Finally, we need to persit changes to the status.</blockquote>
 </section>
 
 <section>
-  <h3>10. A new action method.</h3>
-  <p class="path">src/main/java/com/alltheducks/enabler/stripes/EnablerAction.java</p>
-  <pre><code class="java">
-package com.alltheducks.enabler.stripes;
+  <h3>12. A new action method.</h3>
+  <p class="path"><a href="https://github.com/AllTheDucks/atd-enabler/blob/step/12/src/main/java/com/alltheducks/enabler/stripes/EnablerAction.java">src/main/java/com/alltheducks/enabler/stripes/EnablerAction.java</a></p>
+  <pre><code class="java">...
+public Resolution saveCourseStatus() throws PersistenceException, ConstraintViolationException, ValidationException {
+    CourseSiteLoader courseLoader = CourseSiteDbLoader.Default.getInstance();
+    CourseSitePersister coursePersister = CourseSiteDbPersister.Default.getInstance();
 
-import blackboard.admin.data.IAdminObject;
-import blackboard.admin.data.course.CourseSite;
-import blackboard.admin.persist.course.CourseSiteLoader;
-import blackboard.admin.persist.course.CourseSitePersister;
-import blackboard.admin.persist.course.impl.CourseSiteDbLoader;
-import blackboard.admin.persist.course.impl.CourseSiteDbPersister;
-import blackboard.data.ValidationException;
-import blackboard.db.ConstraintViolationException;
-import blackboard.persist.PersistenceException;
-import blackboard.platform.intl.BbResourceBundle;
-import blackboard.platform.intl.BundleManager;
-import blackboard.platform.intl.BundleManagerFactory;
-import blackboard.platform.plugin.PlugIn;
-import blackboard.platform.plugin.PlugInManager;
-import blackboard.platform.plugin.PlugInManagerFactory;
-import blackboard.platform.plugin.PlugInUtil;
-import blackboard.platform.servlet.InlineReceiptUtil;
-import com.alltheducks.bb.stripes.EntitlementRestrictions;
-import net.sourceforge.stripes.action.*;
-import com.alltheducks.bb.stripes.BlackboardActionBeanContext;
-
-
-@EntitlementRestrictions(entitlements = &quot;atd.enabler.admin.MODIFY&quot;, errorPage = &quot;error.jsp&quot;)
-public class EnablerAction implements ActionBean {
-
-    private BlackboardActionBeanContext context;
-
-    private boolean courseEnabled;
-    private String batchUid;
-    private String courseName;
-
-    @DefaultHandler
-    public Resolution displayEnabler() {
-        return new ForwardResolution(&quot;/WEB-INF/jsp/enabler.jsp&quot;);
+    CourseSite cs = courseLoader.load(batchUid);
+    if (courseEnabled) {
+        cs.setRowStatus(IAdminObject.RowStatus.ENABLED);
+    } else {
+        cs.setRowStatus(IAdminObject.RowStatus.DISABLED);
     }
+    coursePersister.save(cs);
 
-    public Resolution displayCourseStatus() throws PersistenceException {
-        CourseSiteLoader courseLoader = CourseSiteDbLoader.Default.getInstance();
+    String destUrl = InlineReceiptUtil.addSuccessReceiptToUrl(&quot;Enabler.action&quot;,
+      getMessage(&quot;enabler-app.enabler.saveStatus.success.message&quot;, cs.getTitle()));
 
-        CourseSite cs = courseLoader.load(batchUid);
-        IAdminObject.RowStatus status = cs.getRowStatus();
-        courseEnabled = status.equals(IAdminObject.RowStatus.ENABLED);
-        courseName = cs.getTitle();
-
-        return new ForwardResolution(&quot;/WEB-INF/jsp/status.jsp&quot;);
-    }
-
-    public Resolution saveCourseStatus() throws PersistenceException, ConstraintViolationException, ValidationException {
-        CourseSiteLoader courseLoader = CourseSiteDbLoader.Default.getInstance();
-        CourseSitePersister coursePersister = CourseSiteDbPersister.Default.getInstance();
-
-        CourseSite cs = courseLoader.load(batchUid);
-        if (courseEnabled) {
-            cs.setRowStatus(IAdminObject.RowStatus.ENABLED);
-        } else {
-            cs.setRowStatus(IAdminObject.RowStatus.DISABLED);
-        }
-        coursePersister.save(cs);
-
-        String destUrl = InlineReceiptUtil.addSuccessReceiptToUrl(&quot;Enabler.action&quot;, getMessage(&quot;enabler-app.enabler.saveStatus.success.message&quot;, cs.getTitle()));
-
-        return new RedirectResolution(destUrl, false);
-    }
-
-    public boolean isCourseEnabled() {
-        return courseEnabled;
-    }
-
-    public void setCourseEnabled(boolean courseEnabled) {
-        this.courseEnabled = courseEnabled;
-    }
-
-    public String getBatchUid() {
-        return batchUid;
-    }
-
-    public void setBatchUid(String batchUid) {
-        this.batchUid = batchUid;
-    }
-
-    public String getCourseName() {
-        return courseName;
-    }
-
-    public void setCourseName(String courseName) {
-        this.courseName = courseName;
-    }
-
-    private String getMessage(String key, String... args) {
-        PlugInManager pluginMgr = PlugInManagerFactory.getInstance();
-        PlugIn plugin = pluginMgr.getPlugIn(&quot;atd&quot;, &quot;enabler&quot;);
-        BundleManager bm = BundleManagerFactory.getInstance();
-        BbResourceBundle bundle = bm.getPluginBundle(plugin.getId());
-        return bundle.getString(key, args);
-    }
-    public ActionBeanContext getContext() {
-        return context;
-    }
-
-    public void setContext(ActionBeanContext context) {
-        this.context = (BlackboardActionBeanContext)context;
-    }
-
+    return new RedirectResolution(destUrl, false);
 }
+...
+private String getMessage(String key, String... args) {
+    PlugInManager pluginMgr = PlugInManagerFactory.getInstance();
+    PlugIn plugin = pluginMgr.getPlugIn(&quot;atd&quot;, &quot;enabler&quot;);
+    BundleManager bm = BundleManagerFactory.getInstance();
+    BbResourceBundle bundle = bm.getPluginBundle(plugin.getId());
+    return bundle.getString(key, args);
+}
+...
   </code></pre>
 </section>
 
 <section>
-  <h3>And the language pack key!</h3>
-  <p class="path">src/webapp/WEB-INF/bundles/bb-manifest-en_GB.properties</p>
+  <h3>13. And the language pack key!</h3>
+  <p class="path"><a href="https://github.com/AllTheDucks/atd-enabler/blob/step/13/src/main/webapp/WEB-INF/bundles/bb-manifest-en_GB.properties">src/webapp/WEB-INF/bundles/bb-manifest-en_GB.properties</a></p>
   <p>Add this key:</p>
-  <pre><code>
-enabler-app.enabler.saveStatus.success.message=Saved Course '{0}'
+  <pre><code>enabler-app.enabler.saveStatus.success.message=Saved Course '{0}'
   </code></pre>
+</section>
+
+<section>
+  <h3>14. Finally... deploy.</h3>
+  <ol>
+    <li>./gradlew deployb2</li>
+  	<li>Login to Blackboard, naviage to System Admin.</li>
+  	<li>Look for "Course Enabler" tool.</li>
+    <li>Type in a course BatchUid and submit. (You may need to create a course first)</li>
+    <li>Tick or untick the status checkbox and submit.</li>
+  </ol>
 </section>
 
 <section>
