Added the "How is this going to work" slide.

--- a/b2stub-devcon2015.html
+++ b/b2stub-devcon2015.html
@@ -149,6 +149,19 @@
 </section>
 
 <section>
+  <h3>So, how is this going to work?</h3>
+  <ul>
+    <li>We're going to be creating this: <a href="https://github.com/AllTheDucks/atd-enabler">https://github.com/AllTheDucks/atd-enabler</a>
+      <ul>
+        <li>This project has a branch for each step of this presentation.</li>
+        <li>At the top of each slide is a link to the whole file at that step in Github.</li>
+      </ul>
+    </li>
+    <li>This presentation is available at: <a href="https://alltheducks.github.io/atd-presentations/b2stub-devcon2015.html">https://alltheducks.github.io/atd-presentations/b2stub-devcon2015.html</a></li>
+  </ul>
+</section>
+
+<section>
   <h3>1. Clone the stub.</h3>
   <ol>
     <li>Create a project directory</li>
