Updated presentation title.

--- a/b2stub-devcon2015.html
+++ b/b2stub-devcon2015.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <meta charset="utf-8">
-<title>The Title Of Your Presentation</title>
+<title>Using the Building Block Starter Project for Rapid Development</title>
 
 <!-- Your Slides -->
 <!-- One section is one slide -->
