Updated list of files on the USB.

--- a/b2stub-devcon2015.html
+++ b/b2stub-devcon2015.html
@@ -47,6 +47,8 @@
     <li>ATD B2 Stub Project</li>
     <li>IDEA (trial)</li>
     <li>Sublime (trial)</li>
+    <li>Git</li>
+    <li>Atlassian SourceTree (GUI Git)</li>
   </ul>
 </section>
 
